--- a/project/friday-front-end/package.json
+++ b/project/friday-front-end/package.json
@@ -54,7 +54,8 @@
     "antd": "^3.23.6",
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.16",
-    "echarts": "^5.0.0",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "omit.js": "^1.0.2",
@@ -65,6 +66,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "redux": "^4.0.1",
+    "reqwest": "^2.0.5",
     "umi": "^2.13.0",
     "umi-plugin-antd-theme": "^1.0.1",
     "umi-plugin-pro-block": "^1.3.2",
