--- a/project/friday/friday-bills/src/main/resources/application.yml
+++ b/project/friday/friday-bills/src/main/resources/application.yml
@@ -21,3 +21,7 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 15
+
+logging:
+  level:
+    com.friday.bills.mapper : TRACE
