--- a/project/friday/friday-common/pom.xml
+++ b/project/friday/friday-common/pom.xml
@@ -12,6 +12,16 @@
     <groupId>com.friday.common</groupId>
     <artifactId>friday-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
