--- a/project/friday/friday-user/friday-user-service/pom.xml
+++ b/project/friday/friday-user/friday-user-service/pom.xml
@@ -49,15 +49,32 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+
         <dependency>
             <groupId>com.friday.user</groupId>
             <artifactId>friday-user-interface</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.friday.common</groupId>
+            <artifactId>friday-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+
         <!-- springboot检测服务启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <build>
