--- a/project/friday/friday-user/friday-user-service/src/main/resources/application-local.yml
+++ b/project/friday/friday-user/friday-user-service/src/main/resources/application-local.yml
@@ -18,3 +18,9 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 5 # 5秒钟发送一次心跳
     lease-expiration-duration-in-seconds: 15 # 10秒不发送就过期
+friday:
+  jwt:
+    secret: friday@Login(Auth}*^31)&User% # 登录校验的密钥
+    pubKeyPath: F:\JavaEE\project\tmp\\rsa.pub # 公钥地址
+    priKeyPath: F:\JavaEE\project\tmp\\rsa.pri # 私钥地址
+    expire: 30 # 过期时间,单位分钟
