--- a/project/friday/friday-bills/pom.xml
+++ b/project/friday/friday-bills/pom.xml
@@ -96,6 +96,17 @@
             <artifactId>friday-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.friday.user</groupId>
+            <artifactId>friday-user-interface</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
