--- a/project/friday/friday-user/friday-user-interface/pom.xml
+++ b/project/friday/friday-user/friday-user-interface/pom.xml
@@ -31,5 +31,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 </project>
