--- a/project/friday/friday-bills/pom.xml
+++ b/project/friday/friday-bills/pom.xml
@@ -107,6 +107,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
+
+        <!--生成excel文件-->
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
     </dependencies>
 
 </project>
